# nestifypy

./: .gitignore  LICENSE  README.md  SECURITY.md  project.yml  pyproject.toml
docs/: collections.md  console.md  core.md  decorators.md  env.md  flow.md  ignite.md  json.md  komodo.md  os.md  pyunix.md  pyunix_documentacao.docx  yaml.md
examples/: example_platformer.py  pyunix_demo.py  quickstart.py
src/nestify/: __init__.py  cli.py
src/nestify/collections/: __init__.py  array_list.py  hash_map.py  linked_list.py  ordered_set.py  queue.py  stack.py
src/nestify/console/: __init__.py
src/nestify/core/: __init__.py
src/nestify/decorators/: __init__.py
src/nestify/flow/: __init__.py
src/nestify/json/: __init__.py  engine.py  exceptions.py  models.py  parser.py  serializer.py  utils.py  validator.py
src/nestify/os/: __init__.py  dirs.py  files.py  paths.py  process.py  system.py
src/nestify/pyunix/: __init__.py  app.py  assets.py  audio.py  camera.py  events.py  exceptions.py  fonts.py  input.py  physics.py  scene.py  sprite.py  text.py  timer.py  window.py
src/nestify/types/: __init__.py
src/nestify/utils/: __init__.py
src/nestify/yaml/: __init__.py  bootstrap.py  cache.py  engine.py  exceptions.py  metadata.py  models.py  proxy.py  registry.py  runtime.py  scanner.py  watcher.py
src/nestifypy/collections/: __init__.py  _base.py  array_list.py  hash_map.py  linked_list.py  optional.py  ordered_set.py  queue.py  result.py  stack.py  stream.py
src/nestifypy/ignite/: __init__.py
src/nestifypy/ignite/config/: __init__.py  profiles.py  properties.py  resolver.py  yaml_loader.py
src/nestifypy/ignite/core/: __init__.py  application.py  boot.py  container.py  context.py  exceptions.py  lifecycle.py
src/nestifypy/ignite/di/: __init__.py  injector.py  provider.py  registry.py  scopes.py
src/nestifypy/ignite/events/: __init__.py  application_events.py  event_bus.py
src/nestifypy/ignite/security/: __init__.py  jwt.py
src/nestifypy/ignite/testing/: __init__.py  container.py
src/nestifypy/ignite/tests/: test_container.py
src/nestifypy/json/: __init__.py  decorators.py  engine.py  exceptions.py  models.py  parser.py  serializer.py  utils.py  validator.py
src/nestifypy/komodo/: __init__.py  contract.py  core.py  inspect.py
src/nestifypy/os/: __init__.py  dirs.py  files.py  paths.py  process.py  system.py
src/nestifypy/pyunix/: __init__.py  animation.py  app.py  assets.py  audio.py  camera.py  events.py  exceptions.py  fonts.py  input.py  math.py  particles.py  physics.py  scene.py  sprite.py  text.py  tilemap.py  timer.py  transform.py  tween.py  window.py
src/pynest/: __init__.py  cli.py
src/pynest/collections/: __init__.py  array_list.py  hash_map.py  linked_list.py  ordered_set.py  queue.py  stack.py
src/pynest/console/: __init__.py
src/pynest/core/: __init__.py
src/pynest/decorators/: __init__.py
src/pynest/flow/: __init__.py
src/pynest/json/: __init__.py  engine.py  exceptions.py  models.py  parser.py  serializer.py  utils.py  validator.py
src/pynest/os/: __init__.py  dirs.py  files.py  paths.py  process.py  system.py
src/pynest/pyunix/: __init__.py  app.py  assets.py  audio.py  camera.py  events.py  exceptions.py  fonts.py  input.py  physics.py  scene.py  sprite.py  text.py  timer.py  window.py
src/pynest/types/: __init__.py
src/pynest/utils/: __init__.py
src/pynest/yaml/: __init__.py  bootstrap.py  cache.py  engine.py  exceptions.py  metadata.py  models.py  proxy.py  registry.py  runtime.py  scanner.py  watcher.py
tests/: test_collections.py  test_env.py  test_json.py  test_komodo.py  test_nestify.py  test_pynest.py  test_pyunix.py  test_yaml.py  test_yaml_fix.py  test_yaml_namespace.py
tools/: sync.py
